<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#00edff"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:background="#ffffff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_address" />


    <LinearLayout
        android:id="@+id/ll_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line">

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textColor="#ffffff"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_num_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="16sp"
            tools:text="distance num" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line">

        <TextView
            android:id="@+id/tv_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost"
            android:textColor="#ffffff"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_num_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_pay_and_reserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingTop="5sp"
        android:paddingRight="20sp"
        android:paddingBottom="5sp"
        android:text="@string/pay_and_reserve"
        android:textColor="#00edff"
        android:textSize="19sp"
        app:layout_constraintEnd_toStartOf="@+id/ll_cost"
        app:layout_constraintRight_toRightOf="@id/ll_distance"
        app:layout_constraintStart_toEndOf="@+id/ll_distance"
        app:layout_constraintTop_toBottomOf="@id/ll_cost" />

    <TextView
        android:id="@+id/tv_more"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/more"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toStartOf="@+id/ll_cost"
        app:layout_constraintStart_toEndOf="@+id/ll_distance"
        app:layout_constraintTop_toBottomOf="@+id/btn_pay_and_reserve" />



</android.support.constraint.ConstraintLayout>
